Completed Add to Cart button, product gets sent to the cart back-end. Fixed text formatting in cards to prevent them from being too close.

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body {
   }
 
 .card-text{
-line-height: 13px;
+line-height: 17px;
 }
 
 
